<resources>
    <string name="app_name">Amio_detect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Préférences</string>
    <string name="activer_les_services">Activer les services</string>
    <string name="activer_notifications">Activer notifications</string>
    <string name="horaire_de_d_tection">Horaire de détection</string>
    <string name="textview">TextView</string>
    <string name="your_mail">your mail</string>
    <string name="your_mail2">Your Mail</string>
    <string name="aucune_data_disponible">Aucune data disponible</string>
    <string name="load">Chargement…</string>
    <string name="switch_description">Turn this option on or off</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="starting">Début de la surveillance</string>
    <string name="starting_description">Début de l\'heure de surveillance en semaine</string>
    <string name="stopping_description">Fin de l\'heure de surveillance en semaine</string>
    <string name="stopping">Heure de fin de la surveillance</string>
    <string name="we_description">La surveillance est de 24/24h le week-end</string>
    <string name="week_hours_cat">Horaires de surveillance en semaine</string>
    <string name="services">Services</string>
    <string name="end_hour_cat">Horaires de surveillance en week-end</string>
    <string name="stopping_description_we">Fin de l\'heure de surveillance en week-end</string>
    <string name="starting_description_we">Début de l\'heure de surveillance en week-end</string>
    <string name="map">map</string>
    <string name="lamp">lamp</string>
    <string name="week_def">Définition des jours de week-end</string>
    <string name="contact">Information de contact</string>
    <string name="contact_description">Vos information de contact nous permettent de vous prévenir en cas d\'incident</string>
    <string name="starting_mail_description">Début de l\'heure de notification mail en semaine</string>
    <string name="week_hours_mail">Heures de notification par mail en semaine</string>
    <string name="stopping_mail_description">Fin de l\'heure de notification mail en semaine</string>
</resources>
